--- a/Verdun.Enterprise.Inventory/appsettings.json
+++ b/Verdun.Enterprise.Inventory/appsettings.json
@@ -7,8 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    //"InventoryDBStr": "server=VOC-LT99;database=VOC_Enterprise;Trusted_Connection=true",
-    "VerdunDBStr": "Data Source=tcp:voc-dev-sql01.database.windows.net,1433;Initial Catalog=VOC_Enterprise;User Id=devsqladmin@voc-dev-sql01;Password=Verbat1916!"
+    "InventoryDBStr": "server=VOC-LT99;database=VOC_Enterprise;Trusted_Connection=true",    
   },
   "ApiKey": "VerdunSecretKey",
   "AllowedHosts": "*"
