--- a/Verdun.Enterprise.Inventory/appsettings.json
+++ b/Verdun.Enterprise.Inventory/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "InventoryDBStr": "server=VOC-LT99;database=VOC_Enterprise;Trusted_Connection=true",    
+    "VerdunDBStr": "server=VOC-LT99;database=VOC_Enterprise;Trusted_Connection=true"
   },
   "ApiKey": "VerdunSecretKey",
   "AllowedHosts": "*"
